# task_specification_transformer

./: README.md
mir_task_specification_transformer/: CMakeLists.txt  package.xml
mir_task_specification_transformer/ros/include/mir_task_specification_transformer/: task_specification_transformer.h
mir_task_specification_transformer/ros/launch/: task_specification_transformer.launch
mir_task_specification_transformer/ros/src/: task_specification_transformer.cpp  task_specification_transformer_node.cpp
