<?xml version="1.0"?>
<package>
  <name>mir_task_specification_transformer</name>
  <version>0.1.0</version>
  <description>
    Transforms task specification from rockin to robocup.
  </description>

  <license>GPLv3</license>

  <author email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</author>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>at_work_robot_example_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>at_work_robot_example_ros</run_depend>
</package>
